# pyo3-example

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
