[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "hypersync_client_test"
authors = [{ name = "Joss Duff", email = "joss@envio.dev" }]
description = "test publish of hypersync client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
